[tool.poetry]
name = "demotron"
version = "0.1.0"
description = "CLI to delight real people with live demos"
authors = ["Sung Won Chung <sungwonchung3@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
demotron = "demotron.main:app"

[tool.poetry.dependencies]
python = "^3.12"
sqlmesh = {version= "0.107.6", extras = ["web"]}
typer={extras = ["all"], version = "^0.12.3"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"
mypy = "^1.10.0"
pytest = "8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
